--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -5,20 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AirBnB clone</title>
-  </head>
-  <body style="margin: 0; padding: 0">
-    <header
-      style="background-color: #ff0000; height: 70px; width: 100%"
-    ></header>
-    <footer
-      style="
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      header {
+        background-color: #ff0000;
+        height: 70px;
+        width: 100%;
+      }
+      footer {
         background-color: #00ff00;
         height: 60px;
         width: 100%;
         text-align: center;
-      "
-    >
-      Holberton Schoolx
-    </footer>
+      }
+    </style>
+  </head>
+  <body>
+    <header></header>
+    <footer>Holberton Schoolx</footer>
   </body>
 </html>
